NEXT-1623 - Refactor sw-context menu positional properties and fixed code style

--- a/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.scss
+++ b/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.scss
@@ -11,7 +11,7 @@ $sw-context-menu-z-index:                $z-index-context-menu;
     z-index: $sw-context-menu-z-index;
     cursor: pointer;
 
-    &.is--dropup {
+    &.is--top-align {
         .sw-context-menu__content {
             margin-top: calc(-100% - 30px);
 
