--- a/Resources/administration/src/module/sw-category/component/sw-category-select/sw-category-select.scss
+++ b/Resources/administration/src/module/sw-category/component/sw-category-select/sw-category-select.scss
@@ -19,7 +19,7 @@
     .sw-select__input-single {
         border: none;
         font-size: 14px;
-        background: #FFF;
+        background: $color-white;
         padding: 8px 16px;
     }
 }
