--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
@@ -30,9 +30,14 @@
                         {% block sw_customer_detail_addresses_add_modal_address_form %}
                             <sw-customer-address-form :address="currentAddress"
                                                       :countries="countries"
-                                                      :customer="activeCustomer"
-                                                      :attributeSets="customerAddressAttributeSets"
-                                                      @change-default-address="onChangeDefaultAddress">
+                                                      :customer="activeCustomer">
+
+                                <sw-customer-address-form-options :address="currentAddress"
+                                        :customer="activeCustomer"
+                                        :attributeSets="customerAddressAttributeSets"
+                                        @change-default-address="onChangeDefaultAddress">
+                                </sw-customer-address-form-options>
+
                             </sw-customer-address-form>
                         {% endblock %}
 
