NEXT-1623 - Remove sw-select eventListener unsubscribes and fix CR issues

--- a/Resources/administration/src/module/sw-category/component/sw-category-leave-page-modal/sw-category-leave-page-modal.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-leave-page-modal/sw-category-leave-page-modal.html.twig
@@ -1,5 +1,5 @@
 {% block sw_category_leave_page_modal %}
-    <sw-modal :title="$tc('sw-category.general.leavePageModal.headline')"
+    <sw-modal class="sw-category-leave-page-modal" :title="$tc('sw-category.general.leavePageModal.headline')"
         variant="small"
         @closeModal="onCancel">
 
