NEXT-2021 - update the progress bar, progress message and events

--- a/Resources/administration/src/app/component/utils/sw-progress-bar/sw-progress-bar.less
+++ b/Resources/administration/src/app/component/utils/sw-progress-bar/sw-progress-bar.less
@@ -20,5 +20,9 @@
     height: 100%;
     background-color: @sw-progress-bar-value-color;
     border-radius: @sw-progress-bar-height / 2;
+
+    &.is--empty {
+      transition: 0s width linear;
+    }
   }
 }
