--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -2,17 +2,6 @@
 
     <div class="sw-order-detail-base">
 
-        {% block sw_order_detail_base_address_modal %}
-            <sw-order-address-modal v-if="addressBeingEdited"
-                                    :countries="countries"
-                                    :address="addressBeingEdited"
-                                    :orderCustomer="currentOrder.orderCustomer"
-                                    @sw-address-modal-selected-address="onAddressModalAddressSelected"
-                                    @sw-address-modal-close="onAddressModalClose"
-                                    @sw-address-modal-save="onAddressModalSave">
-            </sw-order-address-modal>
-        {% endblock %}
-
         {% block sw_order_detail_base_leave_page_modal %}
             <sw-order-leave-page-modal v-if="isDisplayingLeavePageWarning"
                                        @leave-page-cancel = "onLeaveModalClose"
@@ -20,229 +9,40 @@
             </sw-order-leave-page-modal>
         {% endblock %}
 
-        {% block sw_order_detail_base_order_overview %}
-            <sw-user-card :title="$tc('sw-order.detailBase.cardTitleDetails')"
-                          :user="currentOrder.orderCustomer"
-                          :isLoading="isLoading"
-                          v-if="hasAssociations">
+        {% block sw_order_detail_base__user_card %}
+            <sw-order-user-card v-if="hasAssociations"
+                :currentOrder="currentOrder"
+                :isLoading = "isLoading"
+                :isEditing = "isEditing"
+                @order-changed="saveAndReloadVersionedOrder"
+                @error="$emit('sw-order-detail-base-error',$event)">
+                {% block  sw_order_detail_base_overview_status_change %}
+                    <sw-container v-if="next1567 && !isEditing"
+                                  slot="additional-actions"
+                                  columns="minmax(min-content, 1fr) minmax(min-content, 1fr) 1fr"
+                                  gap="0 15px">
 
-                <template slot="data-additional">
-
-                    {% block  sw_order_detail_base_overview_status_change %}
-                        <sw-container v-if="next1567 && !isEditing"
-                                      columns="minmax(min-content, 1fr) minmax(min-content, 1fr) 1fr"
-                                      gap="0 15px"
-                                      class="sw-order-detail-base__status-action-container">
-
-                            {% block sw_order_detail_base_status_change_transaction %}
-                                <sw-order-state-select :transitionOptions="transactionOptions"
-                                    roundedStyle
-                                    @state-selected="onQuickTransactionStatusChange"
-                                    :placeholder="transactionOptionPlaceholder"
-                                    :backgroundStyle="transactionOptionsBackground">
-                                </sw-order-state-select>
-                            {% endblock %}
-
-                            {% block sw_order_detail_base_status_change_order %}
-                                <sw-order-state-select :transitionOptions="orderOptions"
-                                    roundedStyle
-                                    @state-selected="onQuickOrderStatusChange"
-                                    :placeholder="orderOptionPlaceholder"
-                                    :backgroundStyle="orderOptionsBackground">
-                                </sw-order-state-select>
-                            {% endblock %}
-
-                        </sw-container>
-                    {% endblock %}
-
-                    {% block sw_order_detail_base_order_overview_columns %}
-                        <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="30px 30px">
-
-                            {% block sw_order_detail_base_order_overview_left_column %}
-                                <sw-description-list columns = "1fr" grid = "1fr" class="sw-order-detail-base__summary-vertical">
-
-                                    {% block sw_order_detail_base_order_overview_email %}
-                                        <dt>{{ $tc('sw-order.detailBase.labelCustomerEmail') }}</dt>
-                                        <dd>
-                                            <sw-order-inline-field :displayValue="currentOrder.orderCustomer.email"
-                                                :value="currentOrder.orderCustomer.email"
-                                                :editable="isEditing"
-                                                @input="onCustomerEmailEdited"
-                                                class="sw-order-inline-field__truncateable">
-
-                                            </sw-order-inline-field>
-                                        </dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_order_overview_billing_address %}
-                                        <dt>
-                                            {{ $tc('sw-order.detailBase.headlineBillingAddress') }}
-                                            <sw-button v-show="isEditing"
-                                                       class="sw-order-detail-base__address-edit-button"
-                                                       size="small"
-                                                       @click="onEditBillingAddress">
-                                                {{ $tc('sw-order.detailBase.buttonEditAddress') }}
-                                            </sw-button>
-                                        </dt>
-                                        <dd @click="onEditBillingAddress">
-                                            <sw-address :address="billingAddress" >
-                                            </sw-address>
-                                        </dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_order_overview_left_column_slot %}
-                                    {% endblock %}
-
-                                </sw-description-list>
-                            {% endblock %}
-
-                            {% block sw_order_detail_base_order_overview_right_column %}
-                                <sw-description-list columns = "1fr" grid = "1fr" class="sw-order-detail-base__summary-vertical">
-                                    {% block sw_order_detail_base_order_overview_phone_number %}
-                                        <dt>{{ $tc('sw-order.detailBase.labelCustomerPhoneNumber') }}</dt>
-                                        <dd>
-                                            <sw-order-inline-field :displayValue="billingAddress.phoneNumber? billingAddress.phoneNumber : $tc('sw-order.detailBase.labelNoPhoneNumber')"
-                                                :value="billingAddress.phoneNumber"
-                                                :editable="isEditing"
-                                                @input="onCustomerPhoneNumberEdited"
-                                                class="sw-order-inline-field__truncateable">
-                                            </sw-order-inline-field>
-                                        </dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_order_overview_shipping_address %}
-                                        <dt>
-                                            {{ $tc('sw-order.detailBase.headlineDeliveryAddress') }}
-                                            <sw-button v-show="hasDifferentBillingAndShippingAddress && isEditing"
-                                                       class="sw-order-detail-base__address-edit-button"
-                                                       size="small"
-                                                       @click="onEditDeliveryAddress">
-                                                {{ $tc('sw-order.detailBase.buttonEditAddress') }}
-                                            </sw-button>
-
-                                        </dt>
-                                        <dd v-if="!hasDifferentBillingAndShippingAddress && hasDeliveries">
-                                            <span style="padding-bottom: 30px">
-                                                {{ $tc('sw-order.detailBase.labelSameDeliveryAndBillingAddress') }}
-                                            </span>
-
-                                            <sw-button v-show="!hasDifferentBillingAndShippingAddress &&
-                                                               isEditing"
-                                                           class="sw-order-detail-base__address-add-button"
-                                                           size="small"
-                                                           block
-                                                       @click="onAddNewDeliveryAddress">
-                                                {{ $tc('sw-order.detailBase.buttonAddDeliveryAddress') }}
-                                            </sw-button>
-                                        </dd>
-                                        <dd v-else-if="hasDeliveries" @click="onEditDeliveryAddress">
-                                            <sw-address :address="currentOrder.deliveries[0].shippingOrderAddress">
-                                            </sw-address>
-                                        </dd>
-                                        <dd v-else>
-                                            {{ $tc('sw-order.detailBase.labelNoDeliveriesYet') }}
-                                        </dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_order_overview_right_column_slot %}
-                                    {% endblock %}
-
-                                </sw-description-list>
-                            {% endblock %}
-                        </sw-container>
-
-                        {% block  sw_order_detail_base_order_actions %}
-                            {% block  sw_order_detail_base_order_action_print %}
-                                <sw-button size = "small" square :disabled="true">
-                                    <sw-icon name="default-device-printer" small></sw-icon>
-                                </sw-button>
-                            {% endblock %}
-                            {% block sw_order_detail_base_order_action_cancel %}
-                                <sw-button size = "small" :disabled="true">
-                                    {{ $tc('sw-order.detailBase.buttonCancel') }}
-                                </sw-button>
-                            {% endblock %}
-                            {% block sw_order_detail_base_order_action_delete %}
-                                <sw-button size = "small" :disabled="true">
-                                    {{ $tc('sw-order.detailBase.buttonDelete') }}
-                                </sw-button>
-                            {% endblock %}
+                        {% block sw_order_detail_base_status_change_transaction %}
+                            <sw-order-state-select :transitionOptions="transactionOptions"
+                                                   roundedStyle
+                                                   @state-selected="onQuickTransactionStatusChange"
+                                                   :placeholder="transactionOptionPlaceholder"
+                                                   :backgroundStyle="transactionOptionsBackground">
+                            </sw-order-state-select>
                         {% endblock %}
 
-                    {% endblock %}
-                </template>
-
-                <template slot="summary">
-                    {% block  sw_order_detail_base_info_summary %}
-                        <div>
-                            {% block  sw_order_detail_base_info_summary_entries %}
-                                <div class="sw-user-card__metadata-user-name">
-                                    {{ currentOrder.amountTotal | currency(currentOrder.currency.meta.viewData.shortName) }}
-                                </div>
-
-                                <div class="sw-user-card__metadata-item">
-                                    {{ orderDate }}
-                                </div>
-                            {% endblock %}
-                        </div>
-                    {% endblock %}
-                </template>
-
-                {% block sw_order_detail_base_secondary_info_order_overview %}
-                    <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="30px 30px">
-                        {% block sw_order_detail_base_secondary_info_order_overview_contents %}
-                            <sw-description-list columns = "1fr" grid = "1fr" class="sw-order-detail-base__summary-vertical">
-                                {% block sw_order_detail_base_secondary_info_order_overview_left_column %}
-
-                                    {% block sw_order_detail_base_secondary_info_sales_channel %}
-                                        <dt>{{ $tc('sw-order.detailBase.labelSalesChannel') }}</dt>
-                                        <dd class="sw-order-base__label-sales-channel">{{ currentOrder.salesChannel.meta.viewData.name }}</dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_secondary_info_payment %}
-                                        <dt>{{ $tc('sw-order.detailBase.labelPaymentMethod') }}</dt>
-                                        <dd>{{ currentOrder.paymentMethod.meta.viewData.name }}</dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_secondary_info_delivery %}
-                                        <dt>{{ $tc('sw-order.detailBase.labelShippingMethod') }}</dt>
-                                        <dd>{{ hasDeliveries ? currentOrder.deliveries[0].shippingMethod.meta.viewData.name :$tc('sw-order.detailBase.labelNoDeliveriesYet')  }}</dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_secondary_info_order_overview_left_column_slot %}
-                                    {% endblock %}
-
-                                {% endblock %}
-                            </sw-description-list>
-
-                            <sw-description-list columns = "1fr" grid = "1fr" class="sw-order-detail-base__summary-vertical">
-                                {%  block sw_order_detail_base_secondary_info_order_overview_right_column %}
-
-                                    {% block sw_order_detail_base_secondary_info_order_language %}
-                                        <dt>{{ $tc('sw-order.detailBase.labelLanguage') }}</dt>
-                                        <dd>{{ currentOrder.salesChannel.language.name }}</dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_secondary_info_last_change %}
-                                        <dt>{{ $tc('sw-order.detailBase.labelLastChange') }}</dt>
-                                        <dd>{{ lastChangedDate }}</dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_secondary_info_tracking_code %}
-                                        <dt>{{ $tc('sw-order.detailBase.labelTrackingCode') }}</dt>
-                                        <dd>{{ hasDeliveryTrackingCode ? currentOrder.deliveries[0].trackingCode :$tc('sw-order.detailBase.labelNoDeliveryTrackingCodeYet') }}</dd>
-                                    {% endblock %}
-
-                                    {% block sw_order_detail_base_secondary_info_order_overview_right_column_slot %}
-                                    {% endblock %}
-
-                                {% endblock %}
-                            </sw-description-list>
+                        {% block sw_order_detail_base_status_change_order %}
+                            <sw-order-state-select :transitionOptions="orderOptions"
+                                                   roundedStyle
+                                                   @state-selected="onQuickOrderStatusChange"
+                                                   :placeholder="orderOptionPlaceholder"
+                                                   :backgroundStyle="orderOptionsBackground">
+                            </sw-order-state-select>
                         {% endblock %}
 
                     </sw-container>
                 {% endblock %}
-            </sw-user-card>
+            </sw-order-user-card>
         {% endblock %}
 
         {% block sw_order_detail_base_line_items_card %}
@@ -259,7 +59,7 @@
                             <sw-order-line-items-grid :order="currentOrder"
                                                       :editable="isEditing"
                                                       ref="sw-order-line-item-grid"
-                                                      @sw-order-line-items-grid-item-edited="onLineItemChanges">
+                                                      @sw-order-line-items-grid-item-edited="onRecalculateOrder">
                             </sw-order-line-items-grid>
                         {% endblock %}
 
@@ -332,7 +132,7 @@
         {% endblock %}
 
         {% block sw_order_detail_delivery_metadata %}
-            <sw-order-delivery-metadata v-if="hasDeliveries"
+            <sw-order-delivery-metadata v-if="hasAssociations"
                                         class="sw-order-delivery-metadata"
                                        :title="$tc('sw-order.detailDeliveries.cardTitleItems', 0, { count: ' '})"
                                        :isLoading="isLoading"
