NEXT-2087 - fixed scrollbar and global event listener

--- a/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.html.twig
+++ b/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.html.twig
@@ -2,7 +2,7 @@
     <div class="sw-tabs" :class="tabClasses">
 
             {% block sw_tabs_content %}
-                <div class="sw-tabs__content" ref="swTabContent">
+                <div class="sw-tabs__content" ref="swTabContent" :style="tabContentStyle">
                     {% block sw_tabs_content_slot %}
                         <slot :active="active"></slot>
                     {% endblock %}
