--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-cart-has-delivery-free-item/sw-condition-cart-has-delivery-free-item.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-cart-has-delivery-free-item/sw-condition-cart-has-delivery-free-item.twig
@@ -1,12 +1,12 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_value %}
-        <sw-select name="operator"
+{% block sw_condition_base_fields %}
+    {% block sw_condition_cart_has_delivery_free_item_field_allowed %}
+        <sw-select name="allowed"
                    :id="createId()"
                    itemValueKey="value"
                    displayName="label"
                    :store="selectValues"
                    v-model="allowed"
-                   class="field--select field--main">
+                   class="field--main">
         </sw-select>
     {% endblock %}
 {% endblock %}
