--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-day-of-week/sw-condition-day-of-week.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-day-of-week/sw-condition-day-of-week.html.twig
@@ -1,17 +1,17 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_operator %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_day_of_week_field_operator %}
         <sw-condition-operator-select operatorSetName="string"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
-    {% block sw_condition_fields_value %}
+    {% block sw_condition_day_of_week_field_day_of_week %}
         <sw-select name="dayOfWeek"
                    id="dayOfWeek"
                    itemValueKey="value"
                    displayName="label"
                    :store="weekdays"
                    v-model="condition.value.dayOfWeek"
-                   class="field--main field--select">
+                   class="field--main">
         </sw-select>
     {% endblock %}
 {% endblock %}
