--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-time-range/sw-condition-time-range.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-time-range/sw-condition-time-range.html.twig
@@ -1,18 +1,20 @@
-{% block sw_condition_fields %}
-    {% block sw_condition_fields_value %}
+{% block sw_condition_base_fields %}
+    {% block sw_condition_time_range_field_from_time %}
         <sw-field type="date"
                   dateType="time"
                   name="fromTime"
                   :config="datepickerConfig"
                   v-model="condition.value.fromTime"
-                  class="field--main field--date has--arrow">
+                  class="field--main has--arrow">
         </sw-field>
+    {% endblock %}
+    {% block sw_condition_time_range_field_to_time %}
         <sw-field type="date"
                   dateType="time"
                   name="toTime"
                   :config="datepickerConfig"
                   v-model="condition.value.toTime"
-                  class="field--main field--date">
+                  class="field--main">
         </sw-field>
     {% endblock %}
 {% endblock %}
