NEXT-1601 - Add assignment indicator to sw-category-select

--- a/Resources/administration/src/app/component/form/sw-select-option/sw-select-option.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select-option/sw-select-option.html.twig
@@ -15,7 +15,7 @@
         {% block sw_select_option_item_icon_transition %}
             <transition name="sw-select-appear">
                 {% block sw_select_option_item_icon %}
-                    <sw-icon v-if="isInSelections(item)"
+                    <sw-icon v-if="isInSelections(item) && !selected || selected"
                              name="small-default-checkmark-line-medium"
                              size="16px">
                     </sw-icon>
