--- a/Resources/administration/src/module/sw-category/component/sw-category-select/sw-category-select.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-select/sw-category-select.html.twig
@@ -37,7 +37,7 @@
                                     <ul class="sw-select__results-list">
                                         <template v-for="(item, index) in results">
                                             <slot name="result_items" :item="item" :index="index">
-                                                <sw-select-option :noPreview="true" :index="index" :item="item">
+                                                <sw-select-option :noPreview="true" :index="index" :item="item" :selected="checkAssociation(item.id)">
                                                     {{ item.name  || item.meta.viewData.name }}
                                                 </sw-select-option>
                                             </slot>
