--- a/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
@@ -1,40 +1,56 @@
-<sw-page class="sw-cms-list" :showSearchBar="false" :showSmartBar="false">
+<sw-page class="sw-cms-list" :showSearchBar="false" :showSmartBar="false" @scroll="handleScroll">
     <template slot="content">
         <sw-cms-toolbar>
             <sw-language-switch slot="language-switch" @on-change="onChangeLanguage"></sw-language-switch>
             <h2 slot="title">Content Management</h2>
-            <sw-button slot="actions" variant="primary">Create new layout</sw-button>
+            <sw-button slot="actions" variant="primary">{{ $tc('sw-cms.general.createNewLayout') }}</sw-button>
         </sw-cms-toolbar>
 
         <div class="sw-cms-list__content">
             <div class="sw-cms-list__sidebar">
-                <h3>Welcome.</h3>
+                <h3>{{ $tc('sw-cms.general.greeting') }}.</h3>
 
                 <sw-tabs isVertical small class="sw-cms-list__type-nav">
-                    <sw-tabs-item :to="{ name: 'sw.cms.index' }">Recently updated</sw-tabs-item>
-                    <sw-tabs-item :to="{ name: 'sw.cms.index' }">Landingpages</sw-tabs-item>
-                    <sw-tabs-item :to="{ name: 'sw.cms.index' }">Listings</sw-tabs-item>
-                    <sw-tabs-item :to="{ name: 'sw.cms.index' }">Shop pages</sw-tabs-item>
-                    <sw-tabs-item :to="{ name: 'sw.cms.index' }">Blog articles</sw-tabs-item>
+                    <sw-tabs-item
+                        v-for="pageType in sortPageTypes"
+                        @click="onSortPageType(pageType.value)"
+                        :key="pageType.name"
+                        :active="pageType.active">
+                            {{ pageType.name }}
+                    </sw-tabs-item>
                 </sw-tabs>
             </div>
 
             <div class="sw-cms-list__listing">
                 <div class="sw-cms-list__actions">
-                    <sw-text-field type="text" placeholder="Search">
-                        <sw-icon name="default-action-search" slot="suffix"></sw-icon>
-                    </sw-text-field>
+                    <sw-search-bar :placeholder="$tc('sw-cms.general.placeholderSearchBar')"
+                                   :searchType="$tc('sw-cms.general.mainMenuItemGeneral')"
+                                   :showTag="false"
+                                   @search="onSearch">
+                    </sw-search-bar>
 
                     <div class="actions__sorting">
-                        <span>Sort by:</span>
-                        <sw-field type="select">
-                            <option slot="options" selected>Create date</option>
+                        <sw-field type="select"
+                                  name="sortType"
+                                  :label="$tc('sw-cms.sorting.labelSort')"
+                                  :value="sortingConCat"
+                                  @input="onSortingChanged">
+
+                            <option v-for="sortOption in sortOptions"
+                                    :value="sortOption.value">
+                                {{ sortOption.name }}
+                            </option>
                         </sw-field>
                     </div>
                 </div>
 
                 <div class="sw-cms-list__list">
-                    <sw-cms-list-item :page="cmsPage" :key="cmsPage.id" v-for="cmsPage in pages" @onItemClick="onListItemClick"></sw-cms-list-item>
+                    <sw-loader v-if="isLoading && this.pages.length < 1"></sw-loader>
+                    <sw-cms-list-item v-else
+                                      v-for="cmsPage in pages"
+                                      :page="cmsPage"
+                                      :key="cmsPage.id"
+                                      @onItemClick="onListItemClick"></sw-cms-list-item>
                 </div>
             </div>
         </div>
